--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16,6 +16,13 @@ select,
     border-bottom-right-radius: .25rem !important;
 }
 
+pre {
+	white-space: pre-wrap; 
+    word-break: break-word;
+    font-family: sans-serif;
+    font-size: 0.9rem !important;
+}
+
 h1,
 h2,
 h3,
@@ -250,6 +257,10 @@ a:hover {
     background-color: #fff !important;
     border-bottom-left-radius: 6px !important;
     border-bottom-right-radius: 6px !important;
+}
+
+.card-active {
+	border: 2px solid #007bff;
 }
 
 .box-row {
